--- a/CLASE_02-17-25/websocket/src/views/layouts/main.hbs
+++ b/CLASE_02-17-25/websocket/src/views/layouts/main.hbs
@@ -2,14 +2,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    {{!-- CDN sweetalert --}}
+    <link href=" https://cdn.jsdelivr.net/npm/sweetalert2@11.7.18/dist/sweetalert2.min.css " rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Document</title>
+    <title>App WEB-SOCKET</title>
   </head>
   <body>
     {{{body}}}
-    {{!-- CDN sweetalert --}} 
-    {{!-- SOCKET IO --}}
+    <script src=" https://cdn.jsdelivr.net/npm/sweetalert2@11.7.18/dist/sweetalert2.all.min.js "></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/js/index.js"></script>
   </body>
 </html>
